--- a/Tweeter/appsettings.json
+++ b/Tweeter/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=127.0.0.1;Database=tweeter;Username=postgres;Password=root"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JwtConfig": {
+    "Secret": "fmwkrbslzvqmtggkgjjzttsroravgihn"
   },
   "AllowedHosts": "*"
 }
